switched to helix editor. too lazy to update lateforlunch theme, so just switched to tokyonight for now

--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -26,7 +26,6 @@
 	<dir>/usr/share/fonts</dir>
 	<dir>/usr/local/share/fonts</dir>
 	<dir prefix="xdg">fonts</dir>
-	<!-- the following element will be removed in the future -->
 	<dir>~/.fonts</dir>
 
 <!--
@@ -91,13 +90,27 @@
 	<!-- the following element will be removed in the future -->
 	<cachedir>~/.fontconfig</cachedir>
 
+<!-- Rescan configuration every 30 seconds when FcFontSetList is called -->
 	<config>
-<!--
-  Rescan configuration every 30 seconds when FcFontSetList is called
- -->
 		<rescan>
 			<int>30</int>
 		</rescan>
 	</config>
+	  <alias>
+	    <family>serif</family>
+	    <prefer><family>Crimson</family></prefer>
+	  </alias>
+	  <alias>
+	    <family>sans-serif</family>
+	    <prefer><family>Roboto</family></prefer>
+	  </alias>
+	  <alias>
+	    <family>monospace</family>
+	    <prefer><family>IBMPlexPro</family></prefer>
+	  </alias>
 
+	<match target="font">
+	    <test name="family" compare="eq"><string>BigBlueTerm</string></test>
+	    <edit name="antialias" mode="assign"><bool>false</bool></edit>
+	</match>
 </fontconfig>
